# honeybee_core

./: .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  bee_config.toml  docker-compose.yaml  docker-compose.yml  dockerfile  rustfmt.toml
.github/workflows/: docker.yml
bee_cli/: Cargo.toml
bee_cli/src/: main.rs
bee_comb/: Cargo.toml
bee_comb/src/: lib.rs  proxy.rs
bee_config/: Cargo.toml
bee_config/src/: config.rs  error.rs
bee_message/: Cargo.toml
bee_message/src/: common.rs  core.rs  lib.rs  manager_to_node.rs  node.rs  node_to_manager.rs
bee_message/src/backend/: backend_to_manager.rs  lib.rs  manager_to_backend.rs  mod.rs
bee_message/src/node/: manager_to_node.rs  mod.rs  node_to_manager.rs
src/: main.rs  node.rs
src/backend_manager/: backend.rs  manager.rs  mod.rs
src/node_manager/: manager.rs  mod.rs  node.rs
src/utils/: logger.rs
