[workspace]
members = [
  "bee_config",
  "bee_message",
]

[workspace.package]
version = "0.0.1"
description = "A Honeypot orchestration framework"
edition = "2024"
authors = ["HqNw"]
license = "MIT"
repository = ""


[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


[package]
name = "honeybee_core"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1.86"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde.workspace = true
serde_json.workspace = true
chrono = "0.4.42"
fern = "0.7.1"
colored = "3.0.0"
bee_config = { path = "./bee_config" }
bee_message = { path = "./bee_message" }

