[workspace]
members = [
  "bee_config",
  "bee_message",
  "bee_cli",
  "bee_comb",
]

[workspace.package]
version = "0.0.1"
description = "A Honeypot orchestration framework"
edition = "2024"
authors = ["HqNw"]
license = "MIT"
repository = ""


[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["full"] }
bee_config = { path = "./bee_config" }
bee_message = { path = "./bee_message" }


[package]
name = "honeybee_core"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
tracing = ["tracy-client", "dep:tracing"]

[dependencies]
async-trait = "0.1.86"
fern = "0.7.1"
log = { workspace = true }
chrono = "0.4.42"
rand = "0.9.2"
tokio.workspace = true
uuid = { version = "1.19.0", features = ["v4"] }
serde.workspace = true
serde_json.workspace = true
colored = "3.0.0"
bee_config.workspace = true
bee_message.workspace = true
bee_comb = { path = "./bee_comb" }

tracy-client = { version = "0.18.2", default-features = false, features = ["enable", "system-tracing", "context-switch-tracing", "sampling", "code-transfer", "broadcast"], optional = true }
tracing = { version = "0.1.43", optional = true }

[build-dependencies]
bee_message.workspace = true
serde_json.workspace = true

[package.metadata]
rust-version = "nightly"
