[package]
name = "bee_cli"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bee_message = { workspace = true }
tokio = { workspace = true }
